--- a/cloudformation/backend/app-infrastructure.yml
+++ b/cloudformation/backend/app-infrastructure.yml
@@ -90,21 +90,117 @@ Resources:
           Essential: 'true'
           Image: !Sub 467155500999.dkr.ecr.us-east-1.amazonaws.com/microservices/${appName}:${version}
           Environment:
-            - Name: TYPEORM_HOST
-              Value: '{{resolve:ssm:UPGRADE_DB_HOST}}'
-            - Name: TYPEORM_DATABASE
-              Value: '{{resolve:ssm:UPGRADE_DATABASE_NAME}}'
+            - Name: ADMIN_USERS
+              Value: '{{resolve:ssm:UPGRADE_ADMIN_USERS}}'
+            - Name: APP_BANNER
+              Value: '{{resolve:ssm:UPGRADE_APP_BANNER}}'
+            - Name: APP_DEMO
+              Value: '{{resolve:ssm:UPGRADE_APP_DEMO}}'
+            - Name: APP_HOST
+              Value: '{{resolve:ssm:UPGRADE_APP_HOST}}'
+            - Name: APP_NAME
+              Value: '{{resolve:ssm:UPGRADE_APP_NAME}}'
+            - Name: APP_PORT
+              Value: '{{resolve:ssm:UPGRADE_APP_PORT}}'
+            - Name: APP_ROUTE_PREFIX
+              Value: '{{resolve:ssm:UPGRADE_APP_ROUTE_PREFIX}}'
+            - Name: APP_SCHEMA
+              Value: '{{resolve:ssm:UPGRADE_APP_SCHEMA}}'
+            - Name: AUTH_CHECK
+              Value: '{{resolve:ssm:UPGRADE_AUTH_CHECK}}'
+            - Name: AWS_REGION
+              Value: !Ref AWS::Region
+            - Name: CACHING_ENABLED
+              Value: '{{resolve:ssm:UPGRADE_CACHING_ENABLED}}'
+            - Name: CACHING_TTL
+              Value: '{{resolve:ssm:UPGRADE_CACHING_TTL}}'
+            - Name: CONTROLLERS
+              Value: '{{resolve:ssm:UPGRADE_CONTROLLERS}}'
+            - Name: DOMAIN_NAME
+              Value: '{{resolve:ssm:DOMAIN}}'
+            - Name: EMAIL_BUCKET
+              Value: '{{resolve:ssm:UPGRADE_EMAIL_BUCKET}}'
+            - Name: EMAIL_EXPIRE_AFTER_SECONDS
+              Value: '{{resolve:ssm:UPGRADE_EMAIL_EXPIRE_AFTER_SECONDS}}'
+            - Name: EMAIL_FROM
+              Value: '{{resolve:ssm:UPGRADE_EMAIL_FROM}}'
+            - Name: HOST_URL
+              Value: '{{resolve:ssm:UPGRADE_HOST_URL}}'
+            - Name: INTERCEPTORS
+              Value: '{{resolve:ssm:UPGRADE_INTERCEPTORS}}'
+            - Name: LOG_LEVEL
+              Value: '{{resolve:ssm:UPGRADE_LOG_LEVEL}}'
+            - Name: LOG_OUTPUT
+              Value: '{{resolve:ssm:UPGRADE_LOG_OUTPUT}}'
+            - Name: NEW_RELIC_APP_NAME
+              Value: '{{resolve:ssm:UPGRADE_NEW_RELIC_APP_NAME}}'
+            - Name: RDS_DB_NAME
+              Value: '{{resolve:ssm:UPGRADE_RDS_DB_NAME}}'  
+            - Name: RDS_HOSTNAME
+              Value: '{{resolve:ssm:UPGRADE_RDS_HOSTNAME}}'
+            - Name: RDS_HOSTNAME_REPLICAS
+              Value: '{{resolve:ssm:UPGRADE_RDS_HOSTNAME_REPLICAS}}'
+            - Name: RDS_PORT
+              Value: '{{resolve:ssm:UPGRADE_RDS_PORT}}'
+            - Name: SCHEDULER_STEP_FUNCTION
+              Value: '{{resolve:ssm:UPGRADE_SCHEDULER_STEP_FUNCTION}}'  
+            - Name: SWAGGER_API
+              Value: '{{resolve:ssm:UPGRADE_SWAGGER_API}}'
+            - Name: SWAGGER_ENABLED
+              Value: '{{resolve:ssm:UPGRADE_SWAGGER_ENABLED}}'
+            - Name: SWAGGER_FILE
+              Value: '{{resolve:ssm:UPGRADE_SWAGGER_FILE}}'
+            - Name: SWAGGER_JSON
+              Value: '{{resolve:ssm:UPGRADE_SWAGGER_JSON}}'  
+            - Name: SWAGGER_ROUTE
+              Value: '{{resolve:ssm:UPGRADE_SWAGGER_ROUTE}}'
+            - Name: TYPEORM_CONNECTION
+              Value: '{{resolve:ssm:UPGRADE_TYPEORM_CONNECTION}}'
+            - Name: TYPEORM_ENTITIES
+              Value: '{{resolve:ssm:UPGRADE_TYPEORM_ENTITIES}}'
+            - Name: TYPEORM_ENTITIES_DIR
+              Value: '{{resolve:ssm:UPGRADE_TYPEORM_ENTITIES_DIR}}'  
+            - Name: TYPEORM_FACTORY
+              Value: '{{resolve:ssm:UPGRADE_TYPEORM_FACTORY}}'
+            - Name: TYPEORM_LOGGER
+              Value: '{{resolve:ssm:UPGRADE_TYPEORM_LOGGER}}'
+            - Name: TYPEORM_LOGGING
+              Value: '{{resolve:ssm:UPGRADE_TYPEORM_LOGGING}}'
+            - Name: TYPEORM_MAX_QUERY_EXECUTION_TIME
+              Value: '{{resolve:ssm:UPGRADE_TYPEORM_MAX_QUERY_EXECUTION_TIME}}'
+            - Name: TYPEORM_MIGRATIONS
+              Value: '{{resolve:ssm:UPGRADE_TYPEORM_MIGRATIONS}}'  
+            - Name: TYPEORM_MIGRATIONS_DIR
+              Value: '{{resolve:ssm:UPGRADE_TYPEORM_MIGRATIONS_DIR}}'
+            - Name: TYPEORM_SEED
+              Value: '{{resolve:ssm:UPGRADE_TYPEORM_SEED}}'
+            - Name: TYPEORM_SYNCHRONIZE
+              Value: '{{resolve:ssm:UPGRADE_TYPEORM_SYNCHRONIZE}}'
+            - Name: USE_NEW_RELIC
+              Value: '{{resolve:ssm:UPGRADE_USE_NEW_RELIC}}'  
+            - Name: CONTEXT_METADATA
+              Value: '{{resolve:ssm:UPGRADE_CONTEXT_METADATA}}'
+            - Name: METRICS
+              Value: '{{resolve:ssm:UPGRADE_METRICS}}'
           Secrets:
             - Name: NEW_RELIC_LICENSE_KEY
               ValueFrom: !Sub arn:aws:ssm:us-east-1:${AWS::AccountId}:parameter/NEW_RELIC_LICENSE_KEY
-            - Name: TYPEORM_USERNAME
-              Value: !Sub arn:aws:ssm:us-east-1:${AWS::AccountId}:parameter/UPGRADE_DB_USER}}
-            - Name: TYPEORM_PASSWORD
-              Value: !Sub arn:aws:ssm:us-east-1:${AWS::AccountId}:parameter/UPGRADE_DB_USER_PASSWORD}}
-            - Name: MONITOR_USERNAME
-              Value: !Sub arn:aws:ssm:us-east-1:${AWS::AccountId}:parameter/UPGRADE_MONITOR_USER}}
-            - Name: MONITOR_PASSWORD
-              Value: !Sub arn:aws:ssm:us-east-1:${AWS::AccountId}:parameter/UPGRADE_MONITOR_USER_PASSWORD}}
+            - Name: CLIENT_API_KEY
+              Value: !Sub arn:aws:ssm:us-east-1:${AWS::AccountId}:parameter/UPGRADE_CLIENT_API_KEY}}
+            - Name: CLIENT_API_SECRET
+              Value: !Sub arn:aws:ssm:us-east-1:${AWS::AccountId}:parameter/UPGRADE_CLIENT_API_SECRET}}
+            - Name: GOOGLE_CLIENT_ID
+              Value: !Sub arn:aws:ssm:us-east-1:${AWS::AccountId}:parameter/UPGRADE_GOOGLE_CLIENT_ID}}
+            - Name: RDS_PASSWORD
+              Value: !Sub arn:aws:ssm:us-east-1:${AWS::AccountId}:parameter/UPGRADE_DB_PASSWORD}}
+            - Name: RDS_USERNAME
+              ValueFrom: !Sub arn:aws:ssm:us-east-1:${AWS::AccountId}:parameter/UPGRADE_RDS_USERNAME
+            - Name: SWAGGER_PASSWORD
+              Value: !Sub arn:aws:ssm:us-east-1:${AWS::AccountId}:parameter/UPGRADE_SWAGGER_PASSWORD}}
+            - Name: SWAGGER_USERNAME
+              Value: !Sub arn:aws:ssm:us-east-1:${AWS::AccountId}:parameter/UPGRADE_SWAGGER_USERNAME}}
+            - Name: TOKEN_SECRET_KEY
+              Value: !Sub arn:aws:ssm:us-east-1:${AWS::AccountId}:parameter/UPGRADE_TOKEN_SECRET_KEY}}
           LogConfiguration:
             LogDriver: awsfirelens
           MemoryReservation: 256
@@ -192,7 +288,7 @@ Resources:
       Name: !Sub ${appName}-${environment}-${cluster}
       HealthCheckEnabled: 'true'
       HealthCheckIntervalSeconds: 30
-      HealthCheckPath: /api/
+      HealthCheckPath: /upgrade-service/api/
       HealthCheckPort: traffic-port
       HealthCheckProtocol: HTTP
       HealthCheckTimeoutSeconds: 5
