--- a/frontend/package.json
+++ b/frontend/package.json
@@ -70,7 +70,8 @@
     "rxjs": "7.8.1",
     "tslib": "^2.6.2",
     "uuid": "^9.0.1",
-    "zone.js": "^0.14.3"
+    "zone.js": "^0.14.3",
+    "replace-in-file": "^6.1.0"
   },
   "overrides": {
     "@angular-material-components/datetime-picker": {
