--- a/cloudformation/backend/app-infrastructure.yml
+++ b/cloudformation/backend/app-infrastructure.yml
@@ -182,6 +182,8 @@ Resources:
               Value: '{{resolve:ssm:UPGRADE_CONTEXT_METADATA}}'
             - Name: METRICS
               Value: '{{resolve:ssm:UPGRADE_METRICS}}'
+            - Name: MIDDLEWARES
+              Value: '{{resolve:ssm:UPGRADE_MIDDLEWARES}}'
           Secrets:
             - Name: NEW_RELIC_LICENSE_KEY
               ValueFrom: !Sub arn:aws:ssm:us-east-1:${AWS::AccountId}:parameter/NEW_RELIC_LICENSE_KEY
