--- a/backend/packages/Scheduler/package.json
+++ b/backend/packages/Scheduler/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "build:prod": "NODE_ENV=production npm run build",
-    "build:cl": "NODE_ENV=production npm run build && zip -r ./dist/scheduler-lambda.zip ./dist/schedule node_module",
+    "build:cl": "NODE_ENV=production npm run build && zip -r ./dist/scheduler-lambda.zip dist/schedule node_module && ls -al",
     "lint": "eslint -c ../../../.eslintrc.js --ext .ts './src' && npm run prettier:write",
     "lint:fix": "eslint -c ../../../.eslintrc.js --ext .ts './src' --fix && npm run prettier:check",
     "prettier:check": "prettier --config ../../../.prettierrc './src/**/*.ts' --check",
