--- a/backend/packages/Scheduler/package.json
+++ b/backend/packages/Scheduler/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "build:prod": "NODE_ENV=production npm run build",
-    "build:cl": "NODE_ENV=production npm run build && cd ./dist && zip -r -q scheduler-lambda.zip schedule ../node_module && ls -al",
+    "build:cl": "NODE_ENV=production npm run build",
+    "postbuild": "cd ./dist && zip -r -q scheduler-lambda.zip schedule ../node_module",
     "lint": "eslint -c ../../../.eslintrc.js --ext .ts './src' && npm run prettier:write",
     "lint:fix": "eslint -c ../../../.eslintrc.js --ext .ts './src' --fix && npm run prettier:check",
     "prettier:check": "prettier --config ../../../.prettierrc './src/**/*.ts' --check",
