--- a/cloudformation/backend/app-infrastructure.yml
+++ b/cloudformation/backend/app-infrastructure.yml
@@ -149,7 +149,7 @@ Resources:
             - Name: SCHEDULER_STEP_FUNCTION
               Value: 
                 Fn::ImportValue: 
-                  !Sub lambdaResourcesPrefix-${environment}-stepFunctionArn
+                  !Sub ${lambdaResourcesPrefix}-${environment}-stepFunctionArn
             - Name: SWAGGER_API
               Value: '{{resolve:ssm:UPGRADE_SWAGGER_API}}'
             - Name: SWAGGER_ENABLED
