--- a/frontend/package.json
+++ b/frontend/package.json
@@ -67,6 +67,7 @@
     "lodash.groupby": "^4.6.0",
     "lodash.isequal": "^4.5.0",
     "ngx-skeleton-loader": "^9.0.0",
+    "node": "^21.7.0",
     "rxjs": "7.8.1",
     "tslib": "^2.6.2",
     "uuid": "^9.0.1",
